# digidocs-mgt

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Makefile  README.md  TASKS.md  docker-compose.p14s.yml  docker-compose.yml  synology.http  内部版-面向课题组的文档资产管理与智能助理平台-开发指导方案.md  客户版-面向课题组的文档资产管理与智能助理平台.md  异步任务消息契约.md
backend/: README.md  alembic.ini  pyproject.toml
backend-py-worker/: .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend-py-worker/app/: main.py
backend-py-worker/app/clients/: backend_context_client.py  callback_client.py  http_util.py  openclaw_client.py  task_poller.py
backend-py-worker/app/core/: config.py
backend-py-worker/app/services/: dispatcher.py  document_text_extractor.py  skill_adapter.py  skill_registry.py
backend-py-worker/app/tasks/: contracts.py
backend-py-worker/tests/: conftest.py  test_backend_clients.py  test_dispatcher.py  test_document_text_extractor.py  test_http_util.py  test_openclaw_client.py  test_skill_adapter.py  test_skill_registry.py
backend/alembic/versions/: 20260403_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: assistant.py  audit_events.py  auth.py  dashboard.py  (+6 more)
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: assistant.py  audit.py  base.py  document.py  enums.py  flow.py  handover.py  structure.py  user.py
backend/app/schemas/: assistant.py  auth.py  common.py  document.py  flow.py  handover.py  version.py
backend/app/services/: assistant_client.py
(+254 files in other folders)
