[project]
name = "digidocs-mgt-py-worker"
version = "0.1.0"
description = "Python worker for DigiDocs Mgt AI and document processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
